edit header show user

--- a/template/assets/css/header.css
+++ b/template/assets/css/header.css
@@ -1,5 +1,3 @@
-
-
 .navbar {
     height: 63px;
     border-bottom: 1px solid var(--border-gray-color);
@@ -541,6 +539,7 @@
     border-radius: 5px;
     overflow-y: auto;
     overflow-x: hidden;
+    z-index: 2;
     /* overflow: hidden; */
 }
 
@@ -622,4 +621,39 @@
     height: 1px;
     background-color: var(--border-gray-color);
     margin: 6px 0;
+}
+
+
+
+.navbar__login {
+    display: flex;
+    width: 80px;
+    justify-content: space-between;
+}
+
+.navbar__login-null {
+    display: flex;
+    width: 200px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar__login-null-btn {
+    text-decoration: none;
+    display: flex;
+    color: var(--text-color);
+}
+
+.login-btn {
+    margin-left: 20px;
+}
+
+.register-btn {
+    background-color: var(--yellow-color-dark);
+    padding: 8px 12px;
+    border-radius: 4px;
+}
+
+.register-btn:hover {
+    background-color: var(--yellow-color);
 }
