--- a/template/create_term.html
+++ b/template/create_term.html
@@ -423,7 +423,7 @@
         </div>
 
 
-        <div class="modal" id="modal">
+        <div class="modal" id="modal" style="display: none">
             <div class="modal__overlay">
             </div>
 
