--- a/template/signup.html
+++ b/template/signup.html
@@ -95,6 +95,15 @@
                                 onkeyup="checkValidPassword(this)"
                                 >
                         </div>
+                        <div class="signup__form-item">
+                            <label id="signup-label-role" class="signup__form-item-label">Vui lòng chọn vai trò của bạn</label>
+                            <div class="wrapper-class">
+                                <input type="radio" class="radio" name="x" value="Teacher" id="Teacher" />
+                                <label for="Teacher" class="sub-label">Giáo viên</label>
+                                <input type="radio" class="radio" name="x" value="Student" id="Student" />
+                                <label for="Student" class="sub-label">Sinh viên</label>
+                            </div>
+                        </div>
 
                         <button type="submit" id="signup__form-btn" class="signup__form-btn" disabled>
                             ĐĂNG KÝ
