--- a/template/signup.html
+++ b/template/signup.html
@@ -95,6 +95,15 @@
                                 onkeyup="checkValidPassword(this)"
                                 >
                         </div>
+                        <div class="signup__form-item">
+                        <label id="signup-label-role" class="signup__form-item-label">VUI LÒNG CHỌN VAI TRÒ CỦA BẠN</label>
+                        <div class="wrapper-class">
+                           <input type="radio" class="radio" name="x" value="Teacher-1" id="Teacher-1" />
+                           <label for="Teacher-1" class="sub-label">Giáo viên</label>
+                           <input type="radio" class="radio" name="x" value="Student-0" id="Student-0" />
+                           <label for="Student-0" class="sub-label">Sinh viên</label>
+                        </div>
+                    </div>
 
                         <button type="submit" id="signup__form-btn" class="signup__form-btn" disabled>
                             ĐĂNG KÝ
